[package]
name = "wolfram01"
version = "0.1.0"
authors = ["paddywwoof <patrick@eldwick.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.51"
ndarray = "0.13.0"
pi3d = {path = "../rust_pi3d/pi3d"}